fixed illegal access error